tests/golden/type_errors/namespace_import_alias_as_value.err
Type error at <repo>/tests/golden/type_errors/namespace_import_alias_as_value.cd:2:7: namespace alias `lib` is not a value
  print lib;
        ^
